# LTS-Live_Talent_Sorting

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml  render.yml  requirements.txt
ranking/: urls.py  views.py
ranking/templates/: home.html  index.html  results.html
resume_ranker/: asgi.py  settings.py  urls.py  wsgi.py
resume_ranker/templates/: home.html
staticfiles/: staticfiles.json
